# mod_ppmessagespeechdetect

./: Makefile.am  README.md  mod_ppmessagespeechdetect.c
